fix thanks page

--- a/thanks.html
+++ b/thanks.html
@@ -8,8 +8,8 @@
     <title>CareerAssembly | Thanks!</title>
     <!--<link href="css/bootstrap1.css" rel="stylesheet" />-->
 	  <!--<link href="css/coming-sssoon.css" rel="stylesheet" />-->
-    <link href="assets/css/coming-sssoon_bootstrap.css" rel="stylesheet" type="text/css"/>
-    <link href="assets/css/coming-sssoon.css" rel="stylesheet" type="text/css"/>   
+    <link href="css/coming-sssoon_bootstrap.css" rel="stylesheet" type="text/css"/>
+    <link href="css/coming-sssoon.css" rel="stylesheet" type="text/css"/>   
     <!--     Fonts     -->
     <link href="http://netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.css" rel="stylesheet">
     <link href='http://fonts.googleapis.com/css?family=Grand+Hotel' rel='stylesheet' type='text/css'>
